Fix default option in survey

--- a/aap_bootstrap.cfg
+++ b/aap_bootstrap.cfg
@@ -66,7 +66,7 @@ controller_templates:
                     snmp
                     
                     user'
-                default: RH-seg-2991
+                default: user
                 max: 1024
                 min: 1
                 new_question: true
